# grin-research

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs  main.rs
grin_api_example/: Cargo.toml
grin_api_example/src/: main.rs
grin_wallet_api_example/: Cargo.toml
grin_wallet_api_example/src/: main.rs
jsonrpc-client/: Cargo.toml
jsonrpc-client/src/examples/: grin_api.rs
jsonrpc_client/: Cargo.toml
jsonrpc_client/src/: lib.rs
node_api/: Cargo.toml
node_api/src/: main.rs
