[package]
name = "grin_api_example"
version = "0.1.0"
edition = "2021"

# needed for vscode debug
[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.17", features = ["derive", "env"] }
dotenv = "0.15"
log = "0.4.16"
pretty_env_logger = "0.4.0"
tokio = { version = "1.20.1", features = ["full"] }

jsonrpc_client = { path = "../jsonrpc_client" } 
#grin_api = { git = "https://github.com/flomang/grin.git" } 
grin_api = { path = "../../grin/api" } 
grin_core = { path = "../../grin/core" }
grin_pool = { path = "../../grin/pool" }
grin_util = { path = "../../grin/util" }
