[package]
name = "grin_wallet_api_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# needed for vscode debug
[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.17", features = ["derive", "env"] }
dotenv = "0.15"
home = "0.5.3"
log = "0.4.16"
pretty_env_logger = "0.4.0"
tokio = { version = "1.20.1", features = ["full"] }

jsonrpc_client = { path = "../jsonrpc_client" } 
grin_wallet_api = { path = "../../grin-wallet/api"}
grin_util = { path = "../../grin/util" }